introducing stateful widget createState, initially dice-2 after clicking the button changing to dice -4

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,7 +53,12 @@ dev_dependencies:
 flutter:
   uses-material-design: true
   assets:
-    - assets/dice.png
+    - assets/dice-1.png
+    - assets/dice-2.png
+    - assets/dice-3.png
+    - assets/dice-4.png
+    - assets/dice-5.png
+    - assets/dice-6.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
